@@ -1,3 +1,7 @@
+2006-12-22  Chris Lumens  <clumens@redhat.com>
+
+	* pykickstart/commands/fc6.py:  Added multipath support back in.
+
 2006-12-20  Chris Lumens  <clumens@redhat.com>
 
 	* pykickstart/commands/fc4.py (CommandReboot.__str__):  Fix output
